fixing mobile overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,7 @@ body {
 	overflow-x: hidden;
 	width: 100%;
 }
+
+.app {
+	overflow-x: hidden;
+}
